@@ -825,7 +825,7 @@ int pthread_spin_unlock (pthread_spinlock_t * lock);
  */
 int pthread_barrier_init (pthread_barrier_t * barrier,
 			  const pthread_barrierattr_t * attr,
-                          int count);
+                          unsigned int count);
 
 int pthread_barrier_destroy (pthread_barrier_t * barrier);
 
